@@ -5,7 +5,9 @@ DIST QuakePack.zip 16447 RMD160 534369eacf4f85f9920d14dc7bdc46b3794e53db SHA1 e1
 DIST TremulousPack.zip 17153 RMD160 c51a6be8bf0a0de5fd084984375361f6c1b022ca SHA1 45508c0fa02c417943dd365cfc4dc799bc96ca3a SHA256 25737d258af7d9dd47cbf8942948e8e1322a6404a643c875911d6a39120567ce
 DIST WarsowPack.zip 17855 RMD160 ba49f62486bb67732071e538b0719335bb0625f4 SHA1 5b64e97ed78e5b3e5679710d382bce804214518c SHA256 756a99c76e486ea3f5d2c45addf8afed504a2faf3087cdd210b420af259c2653
 DIST netradiant-1.5.0_p20110127.tar.xz 2066856 RMD160 cf4f28a08a89052882920a9aecc3c25f3426ce5f SHA1 c07f7168700994a88a8fac3c1b8ab9be2f24e75d SHA256 a3607f0beb66b4ff2d7451ad5e9849d0fd85ab0274931bc12c5fbe1c480e3ee7
+DIST netradiant-1.5.0_p20110827.tar.xz 2077748 RMD160 902381b0b1adc5b48ef0e28358528804e5872a21 SHA1 ec149e03b610c6e39cc0df4618e39ede3dca961b SHA256 c3baafa77d42126e475ba5facd1659da28d36e0bf2a86edfb43a06d49e59c338
 EBUILD netradiant-1.5.0_p20110127.ebuild 4118 RMD160 edac22f14eb1bef8d8f4b30e3bd1b89b2f01c628 SHA1 c8b8e11503dbba31ee05fb95ce71df1c2067ea63 SHA256 ae7a16aa98368f597de0693f1b42999afd44491c6c5e29de6d04ce1cb306e54f
-EBUILD netradiant-9999.ebuild 6592 RMD160 0eb1a484200b5ac6b778bbc3dd9e3d6e8cda6bb5 SHA1 985c40eecabafa0a15741b8f7e54f81a2e13e652 SHA256 737bcee430e7db3b53e1925e56d289dbe2a06dc40abb1fadad55a574034d1e35
-MISC ChangeLog 796 RMD160 4d9bce0f9c8f475b0772a1f5da27b3798e12df3a SHA1 83a9e6af07ef2a992489f4c7a7c1ff2fc7e2c702 SHA256 50b402300aa20ada4c26f76081eeec490fe86dfc3deb356e69ad326dec6ef908
+EBUILD netradiant-1.5.0_p20110827.ebuild 4331 RMD160 0e9d4740838c292984ba647d4f70d1353cac9d51 SHA1 1a4b4f7388e39d8449f5bfda64396fb5fc6dfdae SHA256 48a41f0a6fda76bad91582d946abb56aa9d986673c7c50ab2d683395ef5aafcf
+EBUILD netradiant-9999.ebuild 6613 RMD160 662597199bf6796351c7718c6fcca7083e03f0f7 SHA1 3133a6423ce11df7af7d4b06478a39429be16caa SHA256 aeeae9358bde6b22d62ff4e904b1f39902f87b6e41157d4fba3ee0333d32d3ab
+MISC ChangeLog 1020 RMD160 8def36b602f2d0c6bc42c4a304757d5939e8d5bc SHA1 dd5289f78e16c458871cbabb938e826c1c6cf563 SHA256 75c982e293a7682a06912f893b9ba515e13795da53b7911fc8ca44c2ee9fc842
 MISC metadata.xml 1186 RMD160 be062c22d9a05efbffacba53c88f2ed64b3bfc82 SHA1 dcf36e19740d7918e273cb6b4ab284311e0e6308 SHA256 fdd751ec9cc622879d9a46f66f3a90c390177ddf4b421768abdce5e82688db5f
