@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*netradiant-1.5.0_p20110827 (14 Sep 2011)
+
+  14 Sep 2011; Nikoli <nikoli@lavabit.com> +netradiant-1.5.0_p20110827.ebuild,
+  netradiant-9999.ebuild:
+  add snapshot (tags/xonotic-v0.5.0), git-2.eclass now has unpack, disable
+
   05 Jul 2011; Nikoli <nikoli@lavabit.com> netradiant-1.5.0_p20110127.ebuild,
   netradiant-9999.ebuild:
   migrate to EAPI4 and git-2
